tests-integration/tests/snapshots/test__conflict__check_after.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "foreign.rs",
      "status": "conflict"
    },
    {
      "changed": false,
      "path": "ordinary.rs",
      "status": "clean"
    }
  ]
}
