tests-integration/tests/snapshots/test__conflict__format.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "foreign.rs",
      "status": "conflict"
    },
    {
      "changed": true,
      "path": "ordinary.rs",
      "status": "missing"
    }
  ]
}
