tests-integration/tests/snapshots/test__conflict__format_idempotent.snap
---
source: tests-integration/tests/test.rs
expression: "&report"
---
{
  "files": [
    {
      "outcome": "conflict",
      "path": "foreign.rs"
    },
    {
      "outcome": "clean",
      "path": "ordinary.rs"
    }
  ]
}
