tests-integration/tests/snapshots/test__conflict__tree_before.snap
---
source: tests-integration/tests/test.rs
expression: tree_snapshot(root)
---
=== foreign.rs ===
# CONFIDENTIAL © SIEMENS 2025␊
␊
fn foreign_style() {}␊
=== licenserc.toml ===
[header]␊
keywords = ["confidential", "siemens"]␊
text = "Confidential © Siemens 2026"␊
␊
[files]␊
excludes = ["licenserc.toml"]␊
includes = ["**/*.rs"]␊
=== ordinary.rs ===
// An ordinary leading comment.␊
␊
fn ordinary_comment() {}␊
